# plant_disease_detection

./: .env.template  .gitignore  README.md  launch.py  pyproject.toml  requirements.txt  start.bat  start.ps1
config/: dataset_config.yaml  model_config.yaml  qdrant_config.yaml
data/processed/: metadata.csv
models/vlm_embedder/: model_config.json
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_vlm_embedding.ipynb  04_qdrant_integration.ipynb
scripts/: preprocess_data.sh  run_training.sh  setup_qdrant.py
src/: __init__.py  advanced_augmentation.py  app.py  data_exploration.py  data_loader.py  evaluation_agent.py  gradio_app.py  model.py  qdrant_handler.py  train.py  vlm_utils.py
tests/: test_data_loader.py  test_model.py
